Add nav elements and styling

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,40 @@
 *,
 *::before,
 *::after {
-  -webkit-box-sizing: border-box;  
-  -moz-box-sizing: border-box;    
-  -ms-box-sizing: border-box;   
-  box-sizing: border-box;       
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Mija';
+}
+
+header {
+  border: 1px solid green;
+  background-color: grey;
+}
+
+nav ul {
+  display: flex;
+  justify-content: space-between;
+  margin: 30px 6vw;
+}
+
+nav ul li a {
+  font-weight: bold;
+  color: black;
+  line-height: 3.2em;
+  text-decoration: none;
+}
+
+nav input[type="text"] {
+  height: 50px;
+  border-radius: 12px;
+  border: none;
+  padding-left: 20px;
 }
