--- a/styles/style.css
+++ b/styles/style.css
@@ -38,3 +38,78 @@ nav input[type="text"] {
   border: none;
   padding-left: 20px;
 }
+
+/* Styles for Grid-container-1*/
+.first-heading {
+    margin: 0 300px;
+    color: #fff;
+    font-size: 70px;
+    background-color: #999999;
+    padding: 30px;
+    text-align: center;
+
+}
+
+.grid-item-1-1,
+.grid-item-1-3 {
+    grid-column-start:1;
+    grid-column-end:2;
+}
+
+.grid-item-1-2,
+.grid-item-1-4 {
+    grid-column-start:2;
+    grid-column-end:3;
+}
+
+.grid-item-1-1,
+.grid-item-1-2 {
+    grid-row-start:1;
+    grid-row-end: 2;
+}
+
+.grid-item-1-3,
+.grid-item-1-4 {
+    grid-row-start:2;
+    grid-row-end: 3;
+}
+
+.grid-container-1 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+}
+
+/* Center the texts in grid-container-1*/
+.grid-container-1-center {
+    text-align: center;
+}
+
+.grid-item-1-1,
+.grid-item-1-4 {
+    background-color: #333333;
+}
+
+.grid-item-1-2,
+.grid-item-1-3 {
+    background-color: #999999;
+}
+
+.grid-item-1-1,
+.grid-item-1-2,
+.grid-item-1-3, 
+.grid-item-1-4 {
+    padding-top: 100px;
+    padding-bottom: 100px; 
+}
+
+
+.headings {
+    color: #fff;
+    font-size: 80px;
+}
+
+.texts {
+    color: #fff;
+    font-size: 20px;
+}
