Add styles for search-icon and search bar

--- a/styles/style.css
+++ b/styles/style.css
@@ -32,11 +32,22 @@ nav ul li a {
   text-decoration: none;
 }
 
+/* Search bar */
+form {
+  position: relative;
+}
+
+.search-icon {
+  position: absolute;
+  top: 14px;
+}
+
 nav input[type="text"] {
   height: 50px;
   border-radius: 12px;
   border: none;
   padding-left: 20px;
+  outline: none;
 }
 
 /* Styles for Grid-container-1*/
