--- a/styles/style.css
+++ b/styles/style.css
@@ -125,7 +125,7 @@ nav input[type="text"] {
   font-size: 20px;
 }
 
-/*section 2*/
+/*section 2 container and section 4 container layout*/
 .sect2 {
   display: flex;
   padding: auto 6vw;
@@ -181,4 +181,9 @@ nav input[type="text"] {
   display: grid;
   grid-template-columns: 2fr 4fr;
   grid-template-rows: 1fr;
+}
+
+/* Styles for section 4 containers' items */
+.sect4 {
+  background-color: #3f3e3e;
 }
