Add a width and height to art1 class for the section 2 container and section 4 container

--- a/styles/style.css
+++ b/styles/style.css
@@ -136,6 +136,8 @@ nav input[type="text"] {
   cursor: pointer;
   color: #fff;
   background-color: #ccc;
+  width: 100%;
+  height: 100%;
 }
 
 .art1:hover {
