Edit comments in style.css file

--- a/styles/style.css
+++ b/styles/style.css
@@ -190,7 +190,7 @@ nav input[type="text"] {
   background-color: #3f3e3e;
 }
 
-/* Section 5 styles*/
+/* Section 5 container styles*/
 .sect5{
   height: 95vh;
   background-color: rgb(92, 89, 89);
@@ -219,7 +219,7 @@ nav input[type="text"] {
   color: #fff;
 }
 
-/* Section 6 styles */
+/* Section 6 container styles */
 .see {
   text-align: center;
   margin: 30px auto;
