--- a/styles/style.css
+++ b/styles/style.css
@@ -264,8 +264,15 @@ nav input[type="text"] {
   height: 200px;
   transform: rotateZ(-10deg);
   transform-style: preserve-3d;
-}
+  transform-origin: left bottom;
+  box-shadow: 0 40px 35px -25px rgb(0, 0, 0);
 
+}
+.small-sq{
+  width: 50px;
+  height: 50px;
+  
+}
 .rotated-squares:hover {
   transform: rotateZ(0deg);
   transform-style: preserve-3d;
@@ -284,4 +291,36 @@ nav input[type="text"] {
 .sect8 p {
   font-size: 20px;
   line-height: 30px;
+}
+
+.sect9{
+  display: flex;
+  flex-direction: column;
+  margin: 20px 6vw;
+}
+
+.sect9 .first, .second, .third{
+  display: flex;
+}
+
+.sect10{
+  margin: 30px auto;
+  background-color: #ccc;
+  padding: 6vh 6vw;
+}
+.sect10 h1{
+  margin-top: 20px;
+  font-size: 40px;
+  font-weight: bold;
+}
+.sect10 p{
+  margin-top: 15px;
+  line-height: 1.6em;
+}
+.sect10 button{
+  margin-top: 20px;
+  height: 60px;
+  width: 350px;
+  font-weight: bold;
+  font-size: 23px;
 }
