--- a/styles/style.css
+++ b/styles/style.css
@@ -269,9 +269,14 @@ nav input[type="text"] {
 
 }
 .small-sq{
-  width: 50px;
-  height: 50px;
-  
+  width: 300px;
+  height: 100px;
+  background-color: #333333;
+  transform: rotateZ(-10deg);
+  transform-style: preserve-3d;
+  transform-origin: left bottom;
+  box-shadow: 0 40px 35px -25px rgb(0, 0, 0);
+
 }
 .rotated-squares:hover {
   transform: rotateZ(0deg);
