--- a/styles/style.css
+++ b/styles/style.css
@@ -366,7 +366,7 @@ nav input[type="text"] {
 /* Section 12 container styles */
 .sect12 {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   margin-top: 60px;
   padding-left: 110px;
   padding-bottom: 230px;
