--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@ html {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Mija';
+  font-family: 'Times New Roman', Times, serif;
 }
 
 header {
@@ -50,15 +50,14 @@ nav input[type="text"] {
   outline: none;
 }
 
-/* Styles for Grid-container-1*/
+/* Styles for Grid-container-1 */
 .first-heading {
   margin: 0 300px;
   color: #fff;
   font-size: 70px;
-  background-color: #999999;
+  background-color: #999;
   padding: 30px;
   text-align: center;
-
 }
 
 .grid-item-1-1,
@@ -91,19 +90,19 @@ nav input[type="text"] {
   grid-template-rows: repeat(2, 1fr);
 }
 
-/* Center the texts in grid-container-1*/
+/* Center the texts in grid-container-1 */
 .grid-container-1-center {
   text-align: center;
 }
 
 .grid-item-1-1,
 .grid-item-1-4 {
-  background-color: #333333;
+  background-color: #333;
 }
 
 .grid-item-1-2,
 .grid-item-1-3 {
-  background-color: #666666;
+  background-color: #666;
 }
 
 .grid-item-1-1,
@@ -113,7 +112,6 @@ nav input[type="text"] {
   padding-top: 100px;
   padding-bottom: 100px;
 }
-
 
 .headings {
   color: #fff;
@@ -125,7 +123,7 @@ nav input[type="text"] {
   font-size: 20px;
 }
 
-/*section 2 container and section 4 container layout*/
+/* section 2 container and section 4 container layout */
 .sect2 {
   display: flex;
   padding: auto 6vw;
@@ -190,8 +188,8 @@ nav input[type="text"] {
   background-color: #3f3e3e;
 }
 
-/* Section 5 container styles*/
-.sect5{
+/* Section 5 container styles */
+.sect5 {
   height: 95vh;
   background-color: rgb(92, 89, 89);
   margin: 5vh 15vw 5vh 5vw;
@@ -199,23 +197,28 @@ nav input[type="text"] {
   padding: 40px;
   text-align: center;
 }
-.sect5 .headings{
+
+.sect5 .headings {
   margin-top: 20%;
 }
-.sect5 .texts{
+
+.sect5 .texts {
   margin-top: 20px;
   line-height: 1.4em;
 }
-.sect5 button{
+
+.sect5 button {
   margin: 20px auto;
   height: 50px;
   font-weight: 700;
 }
-.sect5 span{
+
+.sect5 span {
   color: #fff;
-  font-size: 16px
+  font-size: 16px;
 }
-.sect5 a{
+
+.sect5 a {
   color: #fff;
 }
 
@@ -228,7 +231,7 @@ nav input[type="text"] {
 
 /* Section 7 container */
 .sect7 {
-  background-color: #333333;
+  background-color: #333;
   text-align: center;
   padding: 30px 95px 175px 95px;
 }
@@ -243,7 +246,7 @@ nav input[type="text"] {
   line-height: 1.4em;
 }
 
-.sect7 button{
+.sect7 button {
   margin: 20px auto;
   height: 50px;
   font-weight: 700;
@@ -259,25 +262,25 @@ nav input[type="text"] {
 }
 
 .rotated-squares {
-  background-color: #333333;
+  background-color: #333;
   width: 220px;
   height: 190px;
   transform: rotateZ(-10deg);
   transform-style: preserve-3d;
   transform-origin: left bottom;
   box-shadow: 0 40px 35px -25px rgb(0, 0, 0);
-
 }
-.small-sq{
+
+.small-sq {
   width: 300px;
   height: 100px;
-  background-color: #333333;
+  background-color: #333;
   transform: rotateZ(-10deg);
   transform-style: preserve-3d;
   transform-origin: left bottom;
   box-shadow: 0 40px 35px -25px rgb(0, 0, 0);
-
 }
+
 .rotated-squares:hover {
   transform: rotateZ(0deg);
   transform-style: preserve-3d;
@@ -299,32 +302,37 @@ nav input[type="text"] {
 }
 
 /* Section 9 container styles */
-.sect9{
+.sect9 {
   display: flex;
   flex-direction: column;
   margin: 20px 6vw;
 }
 
-.sect9 .first, .second, .third{
+.sect9 .first,
+.second,
+.third {
   display: flex;
 }
 
 /* Section 10 container styles */
-.sect10{
+.sect10 {
   margin: 30px auto;
   background-color: #ccc;
   padding: 6vh 6vw;
 }
-.sect10 h1{
+
+.sect10 h1 {
   margin-top: 20px;
   font-size: 40px;
   font-weight: bold;
 }
-.sect10 p{
+
+.sect10 p {
   margin-top: 15px;
   line-height: 1.6em;
 }
-.sect10 button{
+
+.sect10 button {
   margin-top: 20px;
   height: 60px;
   width: 350px;
@@ -347,9 +355,9 @@ nav input[type="text"] {
 
 .sect11 h1,
 .sect12 h1 {
- font-size: 30px;
- margin-top: 20px;
- margin-bottom: 10px;
+  font-size: 30px;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 .sect11 ul li,
@@ -358,11 +366,25 @@ nav input[type="text"] {
   margin-left: 28px;
 }
 
+/* Styles for footer container links */
+.foot-top a {
+  color: #333;
+}
+
+.foot-bottom a {
+  color: #333;
+}
+
+.final-foot a {
+  color: #333;
+  font-size: 15px;
+}
+
 .sect11 ul li a,
 .sect12 ul li a {
- color: rgb(21, 172, 241);    
- font-size: 25px;
- line-height: 35px;
+  color: rgb(21, 172, 241);
+  font-size: 25px;
+  line-height: 35px;
 }
 
 /* Section 12 container styles */
@@ -376,7 +398,7 @@ nav input[type="text"] {
 
 .sect12-flex-item-2 {
   margin-left: 40px;
-  background-color: #333333;
+  background-color: #333;
   padding: 60px 10px 220px 10px;
   text-align: center;
 }
@@ -388,48 +410,43 @@ nav input[type="text"] {
 }
 
 /* Footer container styles */
-footer{
+footer {
   height: 100vh;
-  width:100%;
+  width: 100%;
   background-color: gray;
   padding: 30px;
 }
-.foot-top{
+
+.foot-top {
   text-align: center;
 }
-.foot-top ul li{
+
+.foot-top ul li {
   display: inline-flex;
   font-size: 20px;
   padding: 15px;
+}
 
-}
-.foot-top a{
-  color: #333333;
-}
-.foot-bottom{
+.foot-bottom {
   text-align: center;
   margin-top: 70px;
 }
-.foot-bottom p{
+
+.foot-bottom p {
   font-style: italic;
 }
-.foot-bottom h2{
+
+.foot-bottom h2 {
   margin-top: 15px;
   line-height: 1.6em;
 }
-.foot-bottom a{
-  color: #333333;
-}
-.final-foot{
+
+.final-foot {
   text-align: center;
   margin-top: 20px;
 }
-.final-foot ul li{
+
+.final-foot ul li {
   display: inline-flex;
   padding: 10px;
- 
-}
-.final-foot a{
-  color: #333333;
-  font-size: 15px;
 }
