--- a/styles/style.css
+++ b/styles/style.css
@@ -51,6 +51,20 @@ nav input[type="text"] {
 }
 
 /* Styles for Grid-container-1 */
+main { 
+  position: relative;
+} 
+.first-heading { 
+  margin: 0 500px; 
+  color: #fff; 
+  font-size: 40px; 
+  background-color: #666666; 
+  padding: 30px;
+  text-align:center; 
+  position: absolute;
+  left: 5%;
+}
+
 .first-heading {
   margin: 0 300px;
   color: #fff;
@@ -258,6 +272,7 @@ nav input[type="text"] {
 
 .rotated-squares {
   background-color: #333;
+  border-radius: 6px;
   width: 220px;
   height: 190px;
   transform: rotateZ(-10deg);
@@ -269,6 +284,7 @@ nav input[type="text"] {
 .small-sq {
   width: 300px;
   height: 100px;
+  border-radius: 6px;
   background-color: #333;
   transform: rotateZ(-10deg);
   transform-style: preserve-3d;
